@@ -20,7 +20,8 @@ PHP                                                                        NEWS
 - Fixed a NULL pointer dereference when processing invalid XML-RPC
   requests (Fixes CVE-2010-0397, bug #51288). (Raphael Geissert)
 - Fixed 64-bit integer overflow in mhash_keygen_s2k(). (Clément LECIGNE, Stas) 
-
+- Fixed bug #51647 Certificate file without private key (pk in another file)
+  doesn't work. (Andrey)
 - Fixed bug #51629 (CURLOPT_FOLLOWLOCATION error message is misleading).
   (Pierre)
 - Fixed bug #51627 (script path not correctly evaluated).
